--- a/app/presentation/views_html/res_detail.slim
+++ b/app/presentation/views_html/res_detail.slim
@@ -1,3 +1,8 @@
+.container  
+  nav.navbar.navbar-expand-lg.navbar-light.bg-light
+    a.navbar-brand href="/"  Ewa in Taipei Area
+    
+  .row.blank-row
 .container
   .row
     .col-md-6
