--- a/app/presentation/views_html/restaurant.slim
+++ b/app/presentation/views_html/restaurant.slim
@@ -1,3 +1,9 @@
+.container  
+  nav.navbar.navbar-expand-lg.navbar-light.bg-light
+    a.navbar-brand href="/"  Ewa in Taipei Area
+      
+  .row.blank-row
+
 .container
   .row
     .col-md-6
@@ -120,7 +126,6 @@
 
 
       .row
-        .col-md-6.blank-row 
 
   .row
     .col-md-6
@@ -138,8 +143,6 @@
                       .img_description_layer
                         p.img_description = pick_names[num]
 
-      .row
-        .blank-row
     .col-md-1
     .col-md-3
       .row
