add history redirect

--- a/app/presentation/views_html/home_test.slim
+++ b/app/presentation/views_html/home_test.slim
@@ -6,10 +6,10 @@
         li.nav-item.dropdown
           a#navbarDropdown.nav-link.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button" 
             | History
-          .dropdown-menu aria-labelledby="navbarDropdown" 
-            - 5.times do |num|
-              a.dropdown-item href="#"  =history[num].name 
+          .dropdown-menu aria-labelledby="navbarDropdown"
 
+            - 5.times do |num|
+              a.dropdown-item onclick="window.location='restaurant/pick/#{history[num].id}'" href="#"  =history[num].name 
               .dropdown-divider
 
     form.form-inline.my-2.my-lg-0
