--- a/app/presentation/views_html/home_test.slim
+++ b/app/presentation/views_html/home_test.slim
@@ -155,36 +155,74 @@
         .card-body.d-flex.flex-column.align-items-start
           .row
             .col-md-12
-              strong.d-inline-block.mb-2.text-success What's Ewa Tag ?
+              strong.d-inline-block.mb-2.text-success What's Ewa Tag?
               table style="width:100%" 
-                tr
-                  td 老闆請客 Boss, please treat me!
-                  td.mb-1.text-muted Price[>= 1000] & Rating[>= 4.5]
-                tr
-                  td 存點錢再吃  Eat when you have budget!
-                  td.mb-1.text-muted  Price[>= 1000] & Rating[4 ~ 4.5]
-                tr
-                  td 女朋友叫你帶她去吃 Your girlfriend said she wants to eat that!
-                  td.mb-1.text-muted Price[500 ~ 1000] & Rating[>= 4.5]
-                tr
-                  td 同學會可食 Eat this in your class reunion!
-                  td.mb-1.text-muted Price[500 ~ 1000] & Rating[4 ~ 4.5]
-                tr
-                  td 發薪日可食 Eat when you get your salary!
-                  td.mb-1.text-muted Price[300 ~ 500] & Rating[>= 4.5]
-                tr
-                  td 吃拉，哪次不吃~ Ok, just eat that.
-                  td.mb-1.text-muted  Price[300 ~ 500] & Rating[4 ~ 4.5]
-                tr
-                  td 便宜上天堂 Go to heaven~
-                  td.mb-1.text-muted Price[1 ~ 300] & Rating[>= 4.5]
-                tr
-                  td cp值爆高 Cheap and happy!
-                  td.mb-1.text-muted Price[1 ~ 300] & Rating[4 ~ 4.5]
-                tr
-                  td 維持生命 Only maintaining my life
-                  td.mb-1.text-muted Price[1 ~ 300] & Rating[<= 3.5]
-                tr
-                  td 痛苦盤子 Eat sh**!
-                  td.mb-1.text-muted Price[> 300] & Rating[<= 3.5]
+                .head
+                  tr
+                    th Tag 
+                    th
+                    th Price
+                    th
+                    th Rating
+                .tbody
+                  tr
+                    td 老闆請客 Boss, please treat me!
+                    td
+                    td.mb-1.text-muted >=1000
+                    td
+                    td.mb-1.text-muted >=4.5
+                  tr
+                    td 存點錢再吃  Eat when you have budget!
+                    td
+                    td.mb-1.text-muted >=1000
+                    td
+                    td.mb-1.text-muted 4~4.5
+                  tr
+                    td 女朋友叫你帶她去吃 Your girlfriend said she wants to eat that!
+                    td
+                    td.mb-1.text-muted 500~1000
+                    td
+                    td.mb-1.text-muted >=4.5
+                  tr
+                    td 同學會可食 Eat this in your class reunion!
+                    td
+                    td.mb-1.text-muted 500~1000
+                    td
+                    td.mb-1.text-muted 4~4.5
+                  tr
+                    td 發薪日可食 Eat when you get your salary!
+                    td
+                    td.mb-1.text-muted 300~500
+                    td
+                    td.mb-1.text-muted >=4.5
+                  tr
+                    td 吃拉，哪次不吃~ Ok, just eat that.
+                    td
+                    td.mb-1.text-muted 300~500
+                    td
+                    td.mb-1.text-muted 4~4.5
+                  tr
+                    td 便宜上天堂 Go to heaven~
+                    td
+                    td.mb-1.text-muted 1~300
+                    td
+                    td.mb-1.text-muted >=4.5
+                  tr
+                    td cp值爆高 Cheap and happy!
+                    td
+                    td.mb-1.text-muted 1~300
+                    td
+                    td.mb-1.text-muted 4~4.5
+                  tr
+                    td 維持生命 Only maintaining my life
+                    td
+                    td.mb-1.text-muted 1~300
+                    td
+                    td.mb-1.text-muted <=3.5
+                  tr
+                    td 痛苦盤子 Eat sh**!
+                    td
+                    td.mb-1.text-muted >300
+                    td
+                    td.mb-1.text-muted <=3.5
                         
