edit ewa tag intro

--- a/app/presentation/views_html/home_test.slim
+++ b/app/presentation/views_html/home_test.slim
@@ -223,4 +223,11 @@
                     td.mb-1.text-muted >300
                     td
                     td.mb-1.text-muted <=3.5
+                  tr
+                    td 哎呀還行拉 So~so!
+                    td
+                    td.mb-1.text-muted other
+                    td
+                    td.mb-1.text-muted other
+                    
                         
