fix history loop

--- a/app/presentation/views_html/home_test.slim
+++ b/app/presentation/views_html/home_test.slim
@@ -7,9 +7,14 @@
           a#navbarDropdown.nav-link.dropdown-toggle aria-expanded="false" aria-haspopup="true" data-toggle="dropdown" href="#" role="button" 
             | History
           .dropdown-menu aria-labelledby="navbarDropdown"
+            - x = 0
             - 5.times do |num|
+              - if history[num] != nil
+                - x += 1
+
+            - x.times do |num|
               a.dropdown-item onclick="window.location='restaurant/pick/#{history[num].id}'" href="#"  =history[num].name 
-              - unless num == 4
+              - unless num == x-1
                 .dropdown-divider
 
     form.form-inline.my-2.my-lg-0 role="form" action="restaurant/pick" method="POST" id="search-form"
