Add acceptance tests related script

--- a/app/presentation/views_html/res_detail.slim
+++ b/app/presentation/views_html/res_detail.slim
@@ -8,7 +8,7 @@
               strong.d-inline-block.mb-2.text-success =rest_detail.ewa_tag.ewa_tag
               h3.mb-0
                 a.text-dark =rest_detail.name
-              table style="width:100%" 
+              table style="width:100%" id="rest_infos"
                 tr
                   td Tel 
                   td.mb-1.text-muted =rest_detail.telephone
@@ -24,32 +24,26 @@
 
 
               
-          iframe allowfullscreen="" frameborder="0" height="300" src="https://www.google.com/maps/embed/v1/place?key=#{Ewa::App.config.GMAP_TOKEN}&q=#{rest_detail.name}#{rest_detail.branch_store_name}" style="border:0" width="100%" 
+          iframe id="gmap_iframe" allowfullscreen="" frameborder="0" height="300" src="https://www.google.com/maps/embed/v1/place?key=#{Ewa::App.config.GMAP_TOKEN}&q=#{rest_detail.name}#{rest_detail.branch_store_name}" style="border:0" width="100%" 
     .col-md-6
       .row
-        .column
-          img.res-pic src=rest_detail.pictures[0].link style="width:100%" 
-          img.res-pic src=rest_detail.pictures[1].link style="width:100%" 
-          img.res-pic src=rest_detail.pictures[2].link style="width:100%" 
-        .column
-          img.res-pic src=rest_detail.pictures[3].link style="width:100%" 
-          img.res-pic src=rest_detail.pictures[4].link style="width:100%"
-          img.res-pic src=rest_detail.pictures[5].link style="width:100%"  
-        .column
-          img.res-pic src=rest_detail.pictures[6].link style="width:100%" 
-          img.res-pic src=rest_detail.pictures[7].link style="width:100%" 
-          img.res-pic src=rest_detail.pictures[8].link style="width:100%" 
+        - x = 0
+        - 3.times do |col|
+          .column
+            - x.upto(x+2) do |num| 
+              img.res-pic id="picture_#{num}" src=rest_detail.pictures[num].link style="width:100%"
+                - x += 1
 
   .row
     .blank-row
   .row
     .col-md-9
-      iframe allowfullscreen="" frameborder="0" height="1500" src=rest_detail.article.link style="border:0" width="100%" 
+      iframe id="blog_article" allowfullscreen="" frameborder="0" height="1500" src=rest_detail.article.link style="border:0" width="100%" 
     .col-md-3
       - 5.times do |num|
         .card.flex-md-row.mb-4.box-shadow.h-md-250
-          .card-body.d-flex.flex-column.align-items-start
+          .card-body.d-flex.flex-column.align-items-start id="review_#{num}"
             img src=rest_detail.reviews[num].profile_photo_url width=30 height=30 
-            span =rest_detail.reviews[num].author_name 
-            span =rest_detail.reviews[num].text
-            .mb-1.text-muted =rest_detail.reviews[num].relative_time_description
+            span id="review_name_#{num}" =rest_detail.reviews[num].author_name 
+            span id="review_text_#{num}"=rest_detail.reviews[num].text
+            .mb-1.text-muted id="review_time_#{num}" =rest_detail.reviews[num].relative_time_description
